[package]
name = "matmul-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []
main_program = []

[dependencies]
sha2 = { version = "0.10.8", default-features = false }
jolt = { package = "jolt-sdk", path = "../../../jolt-sdk" }
serde = { version = "1.0.196", default-features = false }


# this is just a main program for testing the library. It uses a "main_program", to turn off the annotation jolt::provable, which triggers some errors otherwise.
[[bin]]
name = "main"
path = "src/main.rs"
features = ["main_program"]